[gd_scene load_steps=2 format=2]

[ext_resource path="res://options_menu.gd" type="Script" id=1]

[node name="OptionsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
margin_right = 320.0
margin_bottom = 180.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
margin_left = 80.0
margin_top = 56.0
margin_right = 239.0
margin_bottom = 124.0

[node name="TitleHeader" type="CenterContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_right = 159.0
margin_bottom = 14.0

[node name="Title" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/TitleHeader"]
margin_left = 49.0
margin_right = 109.0
margin_bottom = 14.0
text = "SETTINGS"

[node name="OptionContainer" type="CenterContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 159.0
margin_bottom = 68.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer/VBoxContainer/OptionContainer"]
margin_right = 159.0
margin_bottom = 50.0

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/CenterContainer/VBoxContainer/OptionContainer/VBoxContainer"]
margin_right = 159.0
margin_bottom = 14.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/CenterContainer/VBoxContainer/OptionContainer/VBoxContainer/CenterContainer"]
margin_right = 159.0
margin_bottom = 14.0

[node name="selector" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/OptionContainer/VBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 8.0
margin_bottom = 14.0
rect_min_size = Vector2( 8, 0 )
text = ">"

[node name="option" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/OptionContainer/VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 12.0
margin_right = 159.0
margin_bottom = 14.0
text = "The are Fake settings..."

[node name="CenterContainer2" type="CenterContainer" parent="MarginContainer/CenterContainer/VBoxContainer/OptionContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 159.0
margin_bottom = 32.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/CenterContainer/VBoxContainer/OptionContainer/VBoxContainer/CenterContainer2"]
margin_right = 159.0
margin_bottom = 14.0

[node name="selector" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/OptionContainer/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_right = 8.0
margin_bottom = 14.0
rect_min_size = Vector2( 8, 0 )
text = ">"

[node name="option" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/OptionContainer/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_left = 12.0
margin_right = 159.0
margin_bottom = 14.0
rect_min_size = Vector2( 147, 0 )
text = "Don't judge me"

[node name="CenterContainer3" type="CenterContainer" parent="MarginContainer/CenterContainer/VBoxContainer/OptionContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 159.0
margin_bottom = 50.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/CenterContainer/VBoxContainer/OptionContainer/VBoxContainer/CenterContainer3"]
margin_right = 159.0
margin_bottom = 14.0

[node name="selector" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/OptionContainer/VBoxContainer/CenterContainer3/HBoxContainer"]
margin_right = 8.0
margin_bottom = 14.0
rect_min_size = Vector2( 8, 0 )
text = ">"

[node name="option" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/OptionContainer/VBoxContainer/CenterContainer3/HBoxContainer"]
margin_left = 12.0
margin_right = 159.0
margin_bottom = 14.0
rect_min_size = Vector2( 147, 0 )
text = "I'll get around to it"
